--- a/_config.yml
+++ b/_config.yml
@@ -130,17 +130,17 @@ keywords: "sql, data, dataanalysis, analysis, excel, analyst, business analyst, 
 
 # Personalize the colours in your website. Colour values can be any valid CSS colour
 
-page-col: "#1a1a2e"
-text-col: "#f5f5f5"
-link-col: "#ff6f61"
-hover-col: "#ff6f61"
-navbar-col: "#f5f5f5"
-navbar-text-col: "#03aee5"
-navbar-border-col: "#DDDDDD"
-footer-col: "#f5f5f5"
-footer-text-col: "#03aee5"
-footer-link-col: "#ff6f61"
-footer-hover-col: "ff6f61"
+page-col: "#FFFFFF"
+ text-col: "#404040"
+ link-col: "#008AFF"
+ hover-col: "#0085A1"
+ navbar-col: "#EAEAEA"
+ navbar-text-col: "#404040"
+ navbar-border-col: "#DDDDDD"
+ footer-col: "#EAEAEA"
+ footer-text-col: "#777777"
+ footer-link-col: "#404040"
+ footer-hover-col: "#0085A1"
 
 # Alternatively, the navbar, footer, and page background can be set to an image
 # instead of colour
