--- a/_config.yml
+++ b/_config.yml
@@ -10,9 +10,10 @@
 ############################
 
 # Name of website
-title: Tech Insights
+title: My Awesome website
+
 # Your name to show in the footer
-author: Logan Honey
+author: Some Person
 
 ###############################################
 # --- List of links in the navigation bar --- #
@@ -23,7 +24,7 @@ navbar-links:
   Resources:
     - Beautiful Jekyll: "https://beautifuljekyll.com"
     - Learn markdown: "https://www.markdowntutorial.com/"
-  Author's home: "https://loganhoney.com"
+  Author's home: "https://deanattali.com"
 
 ################
 # --- Logo --- #
@@ -49,13 +50,14 @@ round-avatar: true
 # You can change the order that they show up on the page by changing the order here.
 # Uncomment the links you want to show and add your information to each one.
 social-network-links:
-  email: "honey.logan.t@gmail.com"
-  github: LoganHoney
-  linkedin: LoganHoney
-  
-  
-  
-  
+  email: "someone@example.com"
+  rss: true  # remove this line if you don't want to show an RSS link at the bottom
+  facebook: deanattali
+  github: daattali
+  twitter: daattali
+  patreon: DeanAttali
+  youtube: "@daattali"
+  whatsapp: 15551212
 #  medium: yourname
 #  reddit: yourname or r/yoursubreddit
 #  linkedin: daattali
@@ -92,11 +94,15 @@ rss-description: This website is a virtual proof that I'm awesome
 
 # Select which social network share links to show in posts
 share-links-active:
+  twitter: true
+  facebook: true
   linkedin: true
+  vk: false
+  reddit: false
 
 # How to display the link to your website in the footer
 # Remove this if you don't want a link in the footer
-url-pretty: "loganhoney.com"
+url-pretty: "MyWebsite.com"
 
 # Add the website title to the title of every page
 title-on-all-pages: true
@@ -114,7 +120,7 @@ feed_show_tags: true
 post_search: true
 
 # Add a button in the footer to edit the current page. Only works if your website is hosted on GitHub
-edit_page_button: false
+edit_page_button: true
 
 # Allow sub-menu items (second-level navigation menu items) to be longer than the top-level menu
 # If this setting is off, then long sub-menu words might get cut off
@@ -122,7 +128,7 @@ edit_page_button: false
 navbar-var-length: false
 
 # The keywords to associate with your website, for SEO purposes
-keywords: "sql, data, dataanalysis, analysis, excel, analyst, business analyst, systems analyst"
+#keywords: "my,list,of,keywords"
 
 ######################################
 # --- Colours / background image --- #
@@ -130,17 +136,17 @@ keywords: "sql, data, dataanalysis, analysis, excel, analyst, business analyst, 
 
 # Personalize the colours in your website. Colour values can be any valid CSS colour
 
- page-col: "#FFFFFF"
- text-col: "#404040"
- link-col: "#008AFF"
- hover-col: "#0085A1"
- navbar-col: "#EAEAEA"
- navbar-text-col: "#404040"
- navbar-border-col: "#DDDDDD"
- footer-col: "#EAEAEA"
- footer-text-col: "#777777"
- footer-link-col: "#404040"
- footer-hover-col: "#0085A1"
+page-col: "#FFFFFF"
+text-col: "#404040"
+link-col: "#008AFF"
+hover-col: "#0085A1"
+navbar-col: "#EAEAEA"
+navbar-text-col: "#404040"
+navbar-border-col: "#DDDDDD"
+footer-col: "#EAEAEA"
+footer-text-col: "#777777"
+footer-link-col: "#404040"
+footer-hover-col: "#0085A1"
 
 # Alternatively, the navbar, footer, and page background can be set to an image
 # instead of colour
@@ -296,4 +302,3 @@ plugins:
 
 # Beautiful Jekyll / Dean Attali
 # 2fc73a3a967e97599c9763d05e564189
-
