--- a/_config.yml
+++ b/_config.yml
@@ -10,10 +10,9 @@
 ############################
 
 # Name of website
-title: My Awesome website
-
+title: Tech Insights
 # Your name to show in the footer
-author: Some Person
+author: Logan Honey
 
 ###############################################
 # --- List of links in the navigation bar --- #
@@ -24,7 +23,7 @@ navbar-links:
   Resources:
     - Beautiful Jekyll: "https://beautifuljekyll.com"
     - Learn markdown: "https://www.markdowntutorial.com/"
-  Author's home: "https://deanattali.com"
+  Author's home: "https://loganhoney.com"
 
 ################
 # --- Logo --- #
@@ -50,14 +49,13 @@ round-avatar: true
 # You can change the order that they show up on the page by changing the order here.
 # Uncomment the links you want to show and add your information to each one.
 social-network-links:
-  email: "someone@example.com"
-  rss: true  # remove this line if you don't want to show an RSS link at the bottom
-  facebook: deanattali
-  github: daattali
-  twitter: daattali
-  patreon: DeanAttali
-  youtube: "@daattali"
-  whatsapp: 15551212
+  email: "honey.logan.t@gmail.com"
+  github: LoganHoney
+  linkedin: LoganHoney
+  
+  
+  
+  
 #  medium: yourname
 #  reddit: yourname or r/yoursubreddit
 #  linkedin: daattali
@@ -94,15 +92,11 @@ rss-description: This website is a virtual proof that I'm awesome
 
 # Select which social network share links to show in posts
 share-links-active:
-  twitter: true
-  facebook: true
   linkedin: true
-  vk: false
-  reddit: false
 
 # How to display the link to your website in the footer
 # Remove this if you don't want a link in the footer
-url-pretty: "MyWebsite.com"
+url-pretty: "loganhoney.com"
 
 # Add the website title to the title of every page
 title-on-all-pages: true
@@ -120,7 +114,7 @@ feed_show_tags: true
 post_search: true
 
 # Add a button in the footer to edit the current page. Only works if your website is hosted on GitHub
-edit_page_button: true
+edit_page_button: false
 
 # Allow sub-menu items (second-level navigation menu items) to be longer than the top-level menu
 # If this setting is off, then long sub-menu words might get cut off
@@ -128,7 +122,7 @@ edit_page_button: true
 navbar-var-length: false
 
 # The keywords to associate with your website, for SEO purposes
-#keywords: "my,list,of,keywords"
+keywords: "sql, data, dataanalysis, analysis, excel, analyst, business analyst, systems analyst"
 
 ######################################
 # --- Colours / background image --- #
@@ -136,17 +130,17 @@ navbar-var-length: false
 
 # Personalize the colours in your website. Colour values can be any valid CSS colour
 
-page-col: "#FFFFFF"
-text-col: "#404040"
-link-col: "#008AFF"
-hover-col: "#0085A1"
-navbar-col: "#EAEAEA"
-navbar-text-col: "#404040"
+page-col: "#1a1a2e"
+text-col: "#f5f5f5"
+link-col: "#ff6f61"
+hover-col: "#ff6f61"
+navbar-col: "#f5f5f5"
+navbar-text-col: "#03aee5"
 navbar-border-col: "#DDDDDD"
-footer-col: "#EAEAEA"
-footer-text-col: "#777777"
-footer-link-col: "#404040"
-footer-hover-col: "#0085A1"
+footer-col: "#f5f5f5"
+footer-text-col: "#03aee5"
+footer-link-col: "#ff6f61"
+footer-hover-col: "ff6f61"
 
 # Alternatively, the navbar, footer, and page background can be set to an image
 # instead of colour
