--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ navbar-links:
 
 # Image to show in the navigation bar - works best with a square image
 # Remove this parameter if you don't want an image in the navbar
-avatar: "/assets/img/avatar-icon.png"
+avatar: "/assets/img/HeadShot.jpg"
 
 # By default, the image is cut into a circle. You can disable this behaviour by setting 'round-avatar: false'
 round-avatar: true
@@ -131,7 +131,7 @@ keywords: "sql, data, dataanalysis, analysis, excel, analyst, business analyst, 
 # Personalize the colours in your website. Colour values can be any valid CSS colour
 
 page-col: "#d4d4d4"
-text-col: "#f5f5f5"
+text-col: "#1a1a2e"
 link-col: "#ff6f61"
 hover-col: "#ff6f61"
 navbar-col: "#f5f5f5"
@@ -141,6 +141,7 @@ footer-col: "#f5f5f5"
 footer-text-col: "#03aee5"
 footer-link-col: "#ff6f61"
 footer-hover-col: "ff6f61"
+
 
 # Alternatively, the navbar, footer, and page background can be set to an image
 # instead of colour
