--- a/_config.yml
+++ b/_config.yml
@@ -127,7 +127,7 @@ keywords: "sql, data, dataanalysis, analysis, excel, analyst, business analyst, 
 
 # Personalize the colours in your website. Colour values can be any valid CSS colour
 
-page-col: "#d4d4d4"
+page-col: "#FFFFFF"
 text-col: "#1a1a2e"
 link-col: "#ff6f61"
 hover-col: "#ff6f61"
