--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@
 ############################
 
 # Name of website
-title: Tech Insights
+title: Tabletop Tech
 # Your name to show in the footer
 author: Logan Honey
 
@@ -28,7 +28,7 @@ navbar-links:
 
 # Image to show in the navigation bar - works best with a square image
 # Remove this parameter if you don't want an image in the navbar
-avatar: "/assets/img/HeadShot.JPG"
+avatar: "/assets/img/Desk.JPEG"
 
 # By default, the image is cut into a circle. You can disable this behaviour by setting 'round-avatar: false'
 round-avatar: true
@@ -93,7 +93,7 @@ share-links-active:
 
 # How to display the link to your website in the footer
 # Remove this if you don't want a link in the footer
-url-pretty: "loganhoney.com"
+
 
 # Add the website title to the title of every page
 title-on-all-pages: true
