--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@
 ############################
 
 # Name of website
-title: Tabletop Tech
+title: Build to Scale
 # Your name to show in the footer
 author: Logan Honey
 
